# poetric-rs

./: CLAUDE.md  README.md  build.py  config.toml  pyproject.toml  run.sh  sync_obsidian.py
content/: _index.md  escrevendo.md  jadica blog.md  sample-poem.md
sass/: style.scss
templates/: base.html  index.html  page.html
